# ha_headon

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
headon_service/: config.yaml
headon_service/src/apps/frontend/: package-lock.json  package.json
headon_service/src/apps/frontend/src/: App.js
headon_service/src/apps/frontend/src/components/: map.js
headon_service/src/apps/web_service/: Dockerfile  README.md  pyproject.toml
headon_service/src/apps/web_service/app/: main.py
headon_service/src/apps/web_service/app/api/: web_service.py
headon_service/src/apps/web_service/app/models/: city_weather.py
headon_service/src/apps/web_service/app/utils/: open_weather_service.py  site_manager.py
headon_service/src/apps/web_service/tests/: test_city.py
