[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "headon"
version = "0.1.0"
description = "Head Home assignment"
authors = ["Alon Fux <AlonFux@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.4.0"
gunicorn = "^20.1.0"
uvicorn = "^0.22.0"
fastapi = "^0.98.0"
requests = "^2.31.0"
geopy = "^2.4.1"
asyncio = "^3.4.3"
pyyaml = "^6.0.1"
